Teaching statement update
Teaching statement update and a few edits on recent blog.

--- a/talk/math-review/index.html
+++ b/talk/math-review/index.html
@@ -222,6 +222,9 @@
         <div class="post-pagination dt w-100 mt4 mb2">
   
   
+    <a class="prev dtc pr2 tl v-top fw6"
+    href="/talk/econ-principles/">&larr; Principles of Economics</a>
+  
   
   
     <a class="next dtc pl2 tr v-top fw6"
