teaching and research updates

--- a/project/mechanization/index.html
+++ b/project/mechanization/index.html
@@ -24,12 +24,12 @@
   
     
   
-<meta name="description" content="Does farm machinery substitute labor and lead to more employment in non-agricultural sectors?">
+<meta name="description" content="Does farm machinery substitute labor and lead to more employment in non-agricultural sectors? It depends. Automation makes farming an even more attractive occupation.">
 
 
 <meta property="og:site_name" content="Ling Yao&#39;s Personal Website">
 <meta property="og:title" content="Agricultural mechanization and structural change | Ling Yao&#39;s Personal Website">
-<meta property="og:description" content="Does farm machinery substitute labor and lead to more employment in non-agricultural sectors?" />
+<meta property="og:description" content="Does farm machinery substitute labor and lead to more employment in non-agricultural sectors? It depends. Automation makes farming an even more attractive occupation." />
 <meta property="og:type" content="page" />
 <meta property="og:url" content="/project/mechanization/" />
 <meta property="og:locale" content="en">
@@ -184,7 +184,7 @@
   
   
     <a class="next dtc pl2 tr v-top fw6"
-    href="/project/sharecropping/">Share tenancy and agricultural risk &rarr;</a>
+    href="/project/subjective-life-expectancy-and-pension-participation/">Subjective life expectancy and pension participation &rarr;</a>
   
 </div>
 
