--- a/about/index.html
+++ b/about/index.html
@@ -169,7 +169,7 @@
 
         <div class="w-100 w-80-ns pl3-ns">
       
-      <p class="measure lh-copy cf">Does farm machinery substitute labor and lead to more employment in non-agricultural sectors? Or does it makes farming a more attractive occupation than ever?</p>
+      <p class="measure lh-copy cf">Does farm machinery substitute labor and lead to more employment in non-agricultural sectors? Or does it make farming a more attractive occupation than ever?</p>
           <a href="/project/mechanization/">Read more</a></p>
         </div>
     </article>
