--- a/project/mechanization/index.html
+++ b/project/mechanization/index.html
@@ -24,12 +24,12 @@
   
     
   
-<meta name="description" content="Does farm machinery substitute labor and lead to more employment in non-agricultural sectors? Or does it makes farming a more attractive occupation than ever?">
+<meta name="description" content="Does farm machinery substitute labor and lead to more employment in non-agricultural sectors? Or does it make farming a more attractive occupation than ever?">
 
 
 <meta property="og:site_name" content="Ling Yao&#39;s Personal Website">
 <meta property="og:title" content="Agricultural mechanization and structural change | Ling Yao&#39;s Personal Website">
-<meta property="og:description" content="Does farm machinery substitute labor and lead to more employment in non-agricultural sectors? Or does it makes farming a more attractive occupation than ever?" />
+<meta property="og:description" content="Does farm machinery substitute labor and lead to more employment in non-agricultural sectors? Or does it make farming a more attractive occupation than ever?" />
 <meta property="og:type" content="page" />
 <meta property="og:url" content="/project/mechanization/" />
 <meta property="og:locale" content="en">
