--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
   
     
   
-<meta name="description" content="Welcome to my personal website! I am a PhD candidate in the Department of Applied Economics, University of Minnesota. I am currently on the job market. My research focuses on topics in agricultural and development economics. On the left is a picture I took when a DJI drone was spraying pesticide on corn in Wucheng County, Shandong Province, China.">
+<meta name="description" content="I am a PhD candidate in the Department of Applied Economics, University of Minnesota. I am currently on the job market. My research focuses on topics in agricultural and development economics. On the left is a picture I took when a DJI drone was spraying pesticide on corn in Wucheng County, Shandong Province, China.">
 
 
 <meta property="og:site_name" content="Ling Yao&#39;s Personal Website">
 <meta property="og:title" content="Ling Yao">
-<meta property="og:description" content="Welcome to my personal website! I am a PhD candidate in the Department of Applied Economics, University of Minnesota. I am currently on the job market. My research focuses on topics in agricultural and development economics. On the left is a picture I took when a DJI drone was spraying pesticide on corn in Wucheng County, Shandong Province, China." />
+<meta property="og:description" content="I am a PhD candidate in the Department of Applied Economics, University of Minnesota. I am currently on the job market. My research focuses on topics in agricultural and development economics. On the left is a picture I took when a DJI drone was spraying pesticide on corn in Wucheng County, Shandong Province, China." />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="/" />
 <meta property="og:locale" content="en">
@@ -39,7 +39,7 @@
 <meta name="twitter:card" content="summary_large_image"/><meta name="twitter:image" content="/img/drone.jpg"/>
 
   <meta itemprop="name" content="Ling Yao">
-<meta itemprop="description" content="Welcome to my personal website! I am a PhD candidate in the Department of Applied Economics, University of Minnesota. I am currently on the job market. My research focuses on topics in agricultural and development economics. On the left is a picture I took when a DJI drone was spraying pesticide on corn in Wucheng County, Shandong Province, China.">
+<meta itemprop="description" content="I am a PhD candidate in the Department of Applied Economics, University of Minnesota. I am currently on the job market. My research focuses on topics in agricultural and development economics. On the left is a picture I took when a DJI drone was spraying pesticide on corn in Wucheng County, Shandong Province, China.">
   
   
   <!--[if IE]><script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
@@ -104,7 +104,7 @@
         <h1 class="f2 f1-m f-subheadline-l fw5-ns mv4 lh-solid">Ling Yao</h1>
         <h2 class="f5 fw7 mt0 mb4 ttu tracked">PhD Candidate in Applied Economics</h2>
         
-        <p class="f4 mt4 lh-copy">Welcome to my personal website! I am a PhD candidate in the Department of Applied Economics, University of Minnesota. I am currently on the job market. My research focuses on topics in agricultural and development economics. On the left is a picture I took when a DJI drone was spraying pesticide on corn in Wucheng County, Shandong Province, China.</p>
+        <p class="f4 mt4 lh-copy">I am a PhD candidate in the Department of Applied Economics, University of Minnesota. I am currently on the job market. My research focuses on topics in agricultural and development economics. On the left is a picture I took when a DJI drone was spraying pesticide on corn in Wucheng County, Shandong Province, China.</p>
         <a class="mt4 action text" href="/project">See current research &rarr;</a>
       </div>
       <div class="tr w-50-l ml4">
