--- a/talk/index.html
+++ b/talk/index.html
@@ -514,9 +514,9 @@
 <div class="blog-info ph4 pt4 pb4 pb0-l">
   
 
-  <h1 class="f3">Teaching is gardening.</h1>
   
-  
+  <p class="f6 lh-copy measure">The teacher who walks in the shadow of the temple, among his followers, gives not of his wisdom but rather of his faith and his lovingness. If he is indeed wise, he does not bid you enter the house of his wisdom, but rather leads you to the threshold of your own mind.</p>
+  <p class="f7 measure lh-copy i mh0-l">Written by Kahlil Gibran</p>
 
 
   <small class="db f7"><a href="/vitae/Yao_Teaching%20Statement.pdf" class="dib fw7 ttu bt bw1 b--black-10 pt3">teaching statement</a></small>
