--- a/project/mechanization/index.html
+++ b/project/mechanization/index.html
@@ -173,6 +173,9 @@
         <div class="post-pagination dt w-100 mt4 mb2">
   
   
+    <a class="prev dtc pr2 tl v-top fw6"
+    href="/project/farm-size-productivity/">&larr; The econometrics of the farm size-productivity relationship debate</a>
+  
   
   
     <a class="next dtc pl2 tr v-top fw6"
